# deadweight

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PHILOSOPHY.md  PUBLISHING.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.beads/: issues.jsonl
.claude/: settings.json
.claude/skills/UX/: skill.md
.deadweight/: .gitignore  config.yaml  deadends.jsonl
.github/: PYPI_CHECKLIST.md
.github/workflows/: publish.yml
agents/: deadends.md
benchmarks/: README.md  TODO.md  analyze.py  run_eval.py  seed_from_transcripts.py
examples/: 01-query-before-attempting.sh  02-log-dead-end.sh  03-team-insights.sh  README.md  seed.sh
frontend/: about.html  humans.html  index.html
frontend/static/: main.js  style.css
schema/: deadend.json
src/deadweight/: __init__.py  cli.py  db.py  models.py  server.py
tests/: test_cli.py  test_server.py
