[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadweight"
version = "0.1.0"
description = "The registry of approaches your agent should never try again."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Henry Starr" }]
keywords = ["ai", "agents", "dead-ends", "registry", "openclaw", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
deadweight = "deadweight.cli:main"

[project.urls]
Homepage = "https://github.com/henstarr/deadweight"
Documentation = "https://deadweight.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/deadweight"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
